
- #14002: Add anchors to items and headings of the web version of the API
  documentation for easier linking.
  (Nicolás Ojeda Bär, report by Louis Roché, review by Gabriel Scherer and
  Florian Angeletti)

- #14023: Add documentation for the [row_more] function.
  (Richard Eisenberg, review by Jacques Garrigue)

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

- #13839, #14008: Reimplement `let open`, `let module` and `let exception` in
  terms of a single construct.
  (Nicolás Ojeda Bär, review by Gabriel Scherer, Samuel Vivien, Ulysse Gérard
  and Vincent Laviron)

- #13911: Refactor the merging of signature constraints, by splitting the
  monolithic merge function into separate, specialized functions (for merging
  types, modules and module types) - sharing only the recursive part for
  handling deep constraints.
  (Clement Blaudeau, review by Florian Angeletti and Samuel Vivien)

- #14024: Fix unterminated-string-initialization warnings from the C compiler.
  (Antonin Décimo, review by David Allsopp and Miod Vallat)

### Build system:

### Bug fixes:


OCaml 5.4.0
---------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- #13340: Array literal syntax can now be used to denote values of type `'a
  array` and `floatarray`, both in expressions and patterns. The compiler
  disambiguates each case by using contextual type information (assuming `'a
  array` by default).
  (Nicolás Ojeda Bär, review by Richard Eisenberg, Jeremy Yallop, Jacques
  Garrigue, and Gabriel Scherer)
- #13097: Immutable arrays
  (Antal Spector-Zabusky and Olivier Nicole, review by Gabriel Scherer,
  Jeremy Yallop and Vincent Laviron)

- #13498: Tuple fields are now optionally labeled.
  (Ryan Tjoa and Chris Casinghino, review by Gabriel Scherer, Chris Casinghino,
  and Leo White)



- RFCs#39, #13404: atomic record fields
    `{ ...; mutable readers : int [@atomic]; ... }`